# datalake-query-ingester

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  log_config.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yaml  config.yml
.github/workflows/: check.yaml
src/bloomberg/datalake/datalakequeryingester/: __init__.py  __main__.py  _apik.py  _data_models.py  _kafka.py  _logging.py  _request_handler.py  _version.py
tests/system/: kafka_consumer.py  test_endpoint.py
