[metadata]
name = bloomberg.datalake.datalakequeryingester
description = Service that consumes datalake metadata from kafka stream and saves it into a database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bbgithub.dev.bloomberg.com/datalake-opensource/datalakequeryingester
maintainer = Cristian Osiac
maintainer_email = mosiac@bloomberg.net
license = Apache-2.0
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
keywords = bloomberg, Bloomberg

[options]
packages = find_namespace:
install_requires =
    confluent_kafka
    fastapi
    pydantic
    pyyaml
    uvicorn
    pytest
    requests
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[sdist]
formats = gztar
